# MutPredPy

./: .gitattributes  .gitignore  .pylintrc  MANIFEST.in  README.md  pyproject.toml  requirements.txt  run_mutpred.sh  setup.cfg  setup.py
.github/workflows/: pylint.yml
MutPredPy/: __main__.py  catalog.py  config.yaml  fasta.py  lsf.py  merge.py  prep.py  remainder.py  sql_connection.py  status.py  utils.py
MutPredPy/catalog/: __init__.py  catalog.py
MutPredPy/computing/: lsf.py
MutPredPy/computing/templates/: lsf_configuration_template.txt
MutPredPy/configure/: configure.py
MutPredPy/fasta/: __init__.py  fasta.py
MutPredPy/merge/: merge.py
MutPredPy/pkg_resources/: Homo_sapiens.GRCh38.combined.pep.all.fa  memory_usage.npy  pu_features_null_distributions.mat  sequence_time.npy
MutPredPy/prep/: input_processing.py  jobs.py  prep.py
MutPredPy/resources/: Homo_sapiens.GRCh38.combined.pep.all.fa  LSF_errors.csv
MutPredPy/status/: status.py
MutPredPy/test/test_data/: test.ENSP.txt  test.ENSP_ENST_ENSG.txt  test.ENSP_unversioned.txt  test.refseq.txt  test.refseq_unversioned.txt  test.vep_110.txt  test.versioned_ENST.vep.txt  test_versioned_ENST.vep.txt
MutPredPy/tests/test_data/: combined_disease_GWAS_ordered_clean_coding_only.vep.txt  disease_GWAS.vep.txt
MutPredPy/utils/: __init__.py  utils.py
mutpred_temp/catalog/: catalog_job.py  mechanisms.py
mutpred_temp/computing/templates/: report_template.txt
mutpred_temp/pkg_resources/: Homo_sapiens.GRCh37.combined.pep.all.fa
mutpred_temp/prep/: __init__.py  prep.py
mutpred_temp/tests/: test_prepare.py
mutpredpy/: __init__.py  __main__.py
mutpredpy/catalog/: __init__.py  catalog.py  catalog_job.py  mechanisms.py
mutpredpy/computing/: lsf.py
mutpredpy/configure/: configure.py
mutpredpy/fasta/: __init__.py  fasta.py
mutpredpy/merge/: merge.py
mutpredpy/pkg_resources/: mp2_features.csv  neutral_property_distributions.csv
mutpredpy/prep/: __init__.py  input_processing.py  jobs.py  prep.py
mutpredpy/status/: status.py
mutpredpy/tests/test_data/: test.ENSP_unversioned.txt  test.refseq_unversioned.txt
mutpredpy/utils/: __init__.py  utils.py
