[metadata]
name = mutpredpy
version = attr: MutPredPy.__version__
description = MutPred functions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Sage-Bionetworks/challengeutils
author = Thomas Yu
author_email = thomas.yu@sagebionetworks.org
license = Apache
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: Unix
    Operating System :: POSIX :: Linux
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Topic :: Software Development :: Libraries
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Bio-Informatics
project_urls =
    Bug Tracker = https://github.com/trberg/MutPredPy/issues
    Source Code = https://github.com/trberg/MutPredPy

[options]
packages = find:
install_requires =
    pandas>=1.1.5
python_requires = >3.6, <3.11
include_package_data = True
zip_safe = False

[options.entry_points]
console_scripts =
    mutpredpy = MutPredPy.__main__:main

[flake8]
max-line-length = 88
ignore =
    # space before : (needed for how black formats slicing)
    E203